--- a/src/templates/app/inc/header/menu.phtml
+++ b/src/templates/app/inc/header/menu.phtml
@@ -24,52 +24,7 @@
                 <!--begin:Menu item-->
                 <div class="menu-item">
                     <!--begin:Menu link-->
-                    <a class="menu-link <?php App\Util\CommonUtils::checkActive($menu, App\Constant\App\MenuSection::MenuClientType, 'active'); ?>" href="/app/static_lists/CT" data-bs-toggle="tooltip" data-bs-trigger="hover" data-bs-dismiss="click" data-bs-placement="right">
-                        <span class="menu-title"><?php echo __('app.client_types') ?></span>
-                    </a>
-                    <!--end:Menu link-->
-                </div>
-                <!--end:Menu item-->
-                <!--begin:Menu item-->
-                <div class="menu-item">
-                    <!--begin:Menu link-->
-                    <a class="menu-link <?php App\Util\CommonUtils::checkActive($menu, App\Constant\App\MenuSection::MenuProcessType, 'active'); ?>" href="/app/process_types" data-bs-toggle="tooltip" data-bs-trigger="hover" data-bs-dismiss="click" data-bs-placement="right">
-                        <span class="menu-title"><?php echo __('app.process_types') ?></span>
-                    </a>
-                    <!--end:Menu link-->
-                </div>
-                <!--end:Menu item-->
-                <!--begin:Menu item-->
-                <div class="menu-item">
-                    <!--begin:Menu link-->
-                    <a class="menu-link <?php App\Util\CommonUtils::checkActive($menu, App\Constant\App\MenuSection::MenuProcessStatus, 'active'); ?>" href="/app/static_lists/PS" data-bs-toggle="tooltip" data-bs-trigger="hover" data-bs-dismiss="click" data-bs-placement="right">
-                        <span class="menu-title"><?php echo __('app.process_statuses') ?></span>
-                    </a>
-                    <!--end:Menu link-->
-                </div>
-                <!--end:Menu item-->
-                <!--begin:Menu item-->
-                <div class="menu-item">
-                    <!--begin:Menu link-->
-                    <a class="menu-link <?php App\Util\CommonUtils::checkActive($menu, App\Constant\App\MenuSection::MenuTaskType, 'active'); ?>" href="/app/static_lists/TT" data-bs-toggle="tooltip" data-bs-trigger="hover" data-bs-dismiss="click" data-bs-placement="right">
-                        <span class="menu-title"><?php echo __('app.task_types') ?></span>
-                    </a>
-                    <!--end:Menu link-->
-                </div>
-                <!--end:Menu item-->
-                <!--begin:Menu item-->
-                <div class="menu-item">
-                    <!--begin:Menu link-->
-                    <a class="menu-link <?php App\Util\CommonUtils::checkActive($menu, App\Constant\App\MenuSection::MenuTaskStatus, 'active'); ?>" href="/app/static_lists/TS" data-bs-toggle="tooltip" data-bs-trigger="hover" data-bs-dismiss="click" data-bs-placement="right">
-                        <span class="menu-title"><?php echo __('app.task_statuses') ?></span>
-                    </a>
-                    <!--end:Menu link-->
-                </div>
-                <!--end:Menu item-->
-                <!--begin:Menu item-->
-                <div class="menu-item">
-                    <!--begin:Menu link-->
-                    <a class="menu-link <?php App\Util\CommonUtils::checkActive($menu, App\Constant\App\MenuSection::MenuTaskPaymentStatus, 'active'); ?>" href="/app/static_lists/TPS" data-bs-toggle="tooltip" data-bs-trigger="hover" data-bs-dismiss="click" data-bs-placement="right">
+                    <a class="menu-link <?php //App\Util\CommonUtils::checkActive($menu, App\Constant\App\MenuSection::MenuTaskPaymentStatus, 'active'); ?>" href="/app/static_lists/TPS" data-bs-toggle="tooltip" data-bs-trigger="hover" data-bs-dismiss="click" data-bs-placement="right">
                         <span class="menu-title"><?php echo __('app.task_payment_statuses') ?></span>
                     </a>
                     <!--end:Menu link-->
