--- a/src/templates/app/inc/header/sidebar.phtml
+++ b/src/templates/app/inc/header/sidebar.phtml
@@ -13,7 +13,7 @@
                 <!--begin::Navbar item-->
                 <li class="nav-item py-1">
                     <!--begin::Navbar link-->
-                    <a href="/app/clients" class="nav-link py-4 px-1 btn <?php App\Util\CommonUtils::checkActive($menu, App\Constant\App\MenuSection::MenuClients, 'active'); ?>">
+                    <a href="/app/clients" class="nav-link py-4 px-1 btn <?php //App\Util\CommonUtils::checkActive($menu, App\Constant\App\MenuSection::MenuClients, 'active'); ?>">
                         <i class="fa-solid fa-briefcase fs-1"></i>
                         <span class="pt-2 fs-9 fs-lg-7 fw-bold"><?php echo __('app.common.clients') ?></span>
                     </a>
@@ -23,7 +23,7 @@
                 <!--begin::Navbar item-->
                 <li class="nav-item py-1">
                     <!--begin::Navbar link-->
-                    <a href="/app/processes" class="nav-link py-4 px-1 btn <?php App\Util\CommonUtils::checkActive($menu, App\Constant\App\MenuSection::MenuProcess, 'active'); ?>">
+                    <a href="/app/processes" class="nav-link py-4 px-1 btn <?php //App\Util\CommonUtils::checkActive($menu, App\Constant\App\MenuSection::MenuProcess, 'active'); ?>">
                         <i class="fa-solid fa-rectangle-list  fs-1"></i>
                         <span class="pt-2 fs-9 fs-lg-7 fw-bold"><?php echo __('app.common.processes') ?></span>
                     </a>
@@ -33,7 +33,7 @@
                 <!--begin::Navbar item-->
                 <li class="nav-item py-1">
                     <!--begin::Navbar link-->
-                    <a href="/app/tasks" class="nav-link py-4 px-1 btn <?php App\Util\CommonUtils::checkActive($menu, App\Constant\App\MenuSection::MenuTasks, 'active'); ?>">
+                    <a href="/app/tasks" class="nav-link py-4 px-1 btn <?php //App\Util\CommonUtils::checkActive($menu, App\Constant\App\MenuSection::MenuTasks, 'active'); ?>">
                         <i class="fa-solid fa-list-check fs-1"></i>
                         <span class="pt-2 fs-9 fs-lg-7 fw-bold"><?php echo __('app.common.tasks') ?></span>
                     </a>
