--- a/src/templates/app/inc/header/menu.phtml
+++ b/src/templates/app/inc/header/menu.phtml
@@ -24,8 +24,8 @@
                 <!--begin:Menu item-->
                 <div class="menu-item">
                     <!--begin:Menu link-->
-                    <a class="menu-link <?php //App\Util\CommonUtils::checkActive($menu, App\Constant\App\MenuSection::MenuTaskPaymentStatus, 'active'); ?>" href="/app/static_lists/TPS" data-bs-toggle="tooltip" data-bs-trigger="hover" data-bs-dismiss="click" data-bs-placement="right">
-                        <span class="menu-title"><?php echo __('app.task_payment_statuses') ?></span>
+                    <a class="menu-link <?php App\Util\CommonUtils::checkActive($menu, App\Constant\App\MenuSection::MenuArea, 'active'); ?>" href="/app/static_lists/AR" data-bs-toggle="tooltip" data-bs-trigger="hover" data-bs-dismiss="click" data-bs-placement="right">
+                        <span class="menu-title"><?php echo __('app.entity.plural.area') ?></span>
                     </a>
                     <!--end:Menu link-->
                 </div>
