--- a/public/app/css/project/base.css
+++ b/public/app/css/project/base.css
@@ -1364,3 +1364,7 @@ form.data-form .card, .form-extra-card
         overflow: auto !important;
     }
 }
+
+.select2-search.select2-search--inline{
+    width: 100% !important;
+}
