Gestión de Productos

--- a/src/templates/app/inc/header/menu.phtml
+++ b/src/templates/app/inc/header/menu.phtml
@@ -39,6 +39,14 @@
                     <!--end:Menu link-->
                 </div>
                 <!--end:Menu item-->
+                <div class="menu-item">
+                    <!--begin:Menu link-->
+                    <a class="menu-link <?php App\Util\CommonUtils::checkActive($menu, App\Constant\App\MenuSection::MenuProduct, 'active'); ?>" href="/app/products" data-bs-toggle="tooltip" data-bs-trigger="hover" data-bs-dismiss="click" data-bs-placement="right">
+                        <span class="menu-title"><?php echo __('app.entity.plural.product') ?></span>
+                    </a>
+                    <!--end:Menu link-->
+                </div>
+                <!--end:Menu item-->
             </div>
             <!--end:Menu sub-->
         </div>
