--- a/src/templates/app/market/form.phtml
+++ b/src/templates/app/market/form.phtml
@@ -1,4 +1,4 @@
-<form id="mt-market-form" class="d-none data-form" data-js="MarketForm" action="/app/market/save/<?php echo \App\Constant\App\FormSaveMode::SaveAndContinue ?>" method="post" autocomplete="off" data-information-prefix="">
+<form id="mt-market-form" class="d-none data-form" data-js="MarketForm" action="/app/market/save/<?php echo \App\Constant\App\FormSaveMode::SaveAndContinue ?>" method="post" autocomplete="off">
     <?php
     $this->insert(
         "inc/common/subheader",
@@ -84,5 +84,4 @@
     <?php if (!empty($data['id'])): ?>
         <?php $this->insert("inc/common/dates_info") ?>
     <?php endif; ?>
-    </div>
 </form>
