--- a/src/templates/app/product/form.phtml
+++ b/src/templates/app/product/form.phtml
@@ -51,45 +51,74 @@
                 </div>
             </div>
 
-            <div class="row">
-                <div class="col-md-4">
-                    <?php $this->insert("inc/common/image_upload", ['id' => 'file-image_es_2', 'title' => __('app.common.image'), 'inputName' => 'image_es_2', 'recommendedDimensions' => '1280px x 853px']) ?>
-                </div>
-                <div class="col-md-4">
-                    <?php $this->insert("inc/common/image_upload", ['id' => 'file-image_es_3', 'title' => __('app.common.image'), 'inputName' => 'image_es_3', 'recommendedDimensions' => '1280px x 853px']) ?>
-                </div>
-                <div class="col-md-4">
-                    <?php $this->insert("inc/common/image_upload", ['id' => 'file-image_es_6', 'title' => __('app.common.image'), 'inputName' => 'image_es_6', 'recommendedDimensions' => '1280px x 853px']) ?>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col-md-4">
-                    <?php $this->insert("inc/common/image_upload", ['id' => 'file-image_en_2', 'title' => __('app.common.image'), 'inputName' => 'image_en_2', 'recommendedDimensions' => '1280px x 853px']) ?>
-                </div>
-                <div class="col-md-4">
-                    <?php $this->insert("inc/common/image_upload", ['id' => 'file-image_en_3', 'title' => __('app.common.image'), 'inputName' => 'image_en_3', 'recommendedDimensions' => '1280px x 853px']) ?>
-                </div>
-                <div class="col-md-4">
-                    <?php $this->insert("inc/common/image_upload", ['id' => 'file-image_en_6', 'title' => __('app.common.image'), 'inputName' => 'image_en_6', 'recommendedDimensions' => '1280px x 853px']) ?>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col-md-4">
-                    <?php $this->insert("inc/common/image_upload", ['id' => 'file-image_fr_2', 'title' => __('app.common.image'), 'inputName' => 'image_fr_2', 'recommendedDimensions' => '1280px x 853px']) ?>
-                </div>
-                <div class="col-md-4">
-                    <?php $this->insert("inc/common/image_upload", ['id' => 'file-image_fr_3', 'title' => __('app.common.image'), 'inputName' => 'image_fr_3', 'recommendedDimensions' => '1280px x 853px']) ?>
-                </div>
-                <div class="col-md-4">
-                    <?php $this->insert("inc/common/image_upload", ['id' => 'file-image_fr_6', 'title' => __('app.common.image'), 'inputName' => 'image_fr_6', 'recommendedDimensions' => '1280px x 853px']) ?>
-                </div>
-            </div>
-
-
         </div>
     </div>
+
+    <div class="card card-custom card-sticky">
+        <div class="card-header">
+            <div class="card-title">
+                <h3><?php echo __('app.language.spanish') ?></h3>
+            </div>
+        </div>
+        <div class="card-body text-center">
+            <div class="row">
+                <div class="col-sm-6 col-md-6 col-lg-4">
+                    <?php $this->insert("inc/common/image_upload", ['id' => 'file-image_es_2', 'title' => __('app.product.image_1_2'), 'inputName' => 'image_es_2', 'recommendedDimensions' => '1280px x 853px']) ?>
+                </div>
+                <div class="col-sm-6 col-md-6 col-lg-4">
+                    <?php $this->insert("inc/common/image_upload", ['id' => 'file-image_es_3', 'title' => __('app.product.image_1_3'), 'inputName' => 'image_es_3', 'recommendedDimensions' => '1280px x 853px']) ?>
+                </div>
+                <div class="col-sm-6 col-md-6 col-lg-4">
+                    <?php $this->insert("inc/common/image_upload", ['id' => 'file-image_es_6', 'title' => __('app.product.image_1_6'), 'inputName' => 'image_es_6', 'recommendedDimensions' => '1280px x 853px']) ?>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="card card-custom card-sticky">
+        <div class="card-header">
+            <div class="card-title">
+                <h3><?php echo __('app.language.english') ?></h3>
+            </div>
+        </div>
+        <div class="card-body text-center">
+            <div class="row">
+                <div class="col-sm-6 col-md-6 col-lg-4">
+                    <?php $this->insert("inc/common/image_upload", ['id' => 'file-image_en_2', 'title' => __('app.product.image_1_2'), 'inputName' => 'image_en_2', 'recommendedDimensions' => '1280px x 853px']) ?>
+                </div>
+                <div class="col-sm-6 col-md-6 col-lg-4">
+                    <?php $this->insert("inc/common/image_upload", ['id' => 'file-image_en_3', 'title' => __('app.product.image_1_3'), 'inputName' => 'image_en_3', 'recommendedDimensions' => '1280px x 853px']) ?>
+                </div>
+                <div class="col-sm-6 col-md-6 col-lg-4">
+                    <?php $this->insert("inc/common/image_upload", ['id' => 'file-image_en_6', 'title' => __('app.product.image_1_6'), 'inputName' => 'image_en_6', 'recommendedDimensions' => '1280px x 853px']) ?>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <div class="card card-custom card-sticky">
+        <div class="card-header">
+            <div class="card-title">
+                <h3><?php echo __('app.language.french') ?></h3>
+            </div>
+        </div>
+        <div class="card-body text-center">
+            <div class="row">
+                <div class="col-sm-6 col-md-6 col-lg-4">
+                    <?php $this->insert("inc/common/image_upload", ['id' => 'file-image_fr_2', 'title' => __('app.product.image_1_2'), 'inputName' => 'image_fr_2', 'recommendedDimensions' => '1280px x 853px']) ?>
+                </div>
+                <div class="col-sm-6 col-md-6 col-lg-4">
+                    <?php $this->insert("inc/common/image_upload", ['id' => 'file-image_fr_3', 'title' => __('app.product.image_1_3'), 'inputName' => 'image_fr_3', 'recommendedDimensions' => '1280px x 853px']) ?>
+                </div>
+                <div class="col-sm-6 col-md-6 col-lg-4">
+                    <?php $this->insert("inc/common/image_upload", ['id' => 'file-image_fr_6', 'title' => __('app.product.image_1_6'), 'inputName' => 'image_fr_6', 'recommendedDimensions' => '1280px x 853px']) ?>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
     <?php if (!empty($data['id'])): ?>
         <?php $this->insert("inc/common/dates_info") ?>
     <?php endif; ?>
