--- a/src/templates/app/market/form.phtml
+++ b/src/templates/app/market/form.phtml
@@ -23,7 +23,7 @@
         </div>
         <div class="card-body">
             <div class="row">
-                <div class="col md-6">
+                <div class="col-md-6">
                     <label class="col-form-label required"><?php echo __('app.common.name') ?></label>
                     <div>
                         <input type="text" class="form-control" required placeholder="<?php echo __('app.common.name') ?>" name="name" maxlength="100" />
