--- a/src/templates/app/user/inc/personal_information.phtml
+++ b/src/templates/app/user/inc/personal_information.phtml
@@ -81,7 +81,7 @@
             </div>
         </div>
     <?php endif; ?>
-    <div class="col-lg-6">
+    <div class="col-lg-6 d-none">
         <label class="col-form-label required"><?php echo __('app.common.color') ?></label>
         <div>
             <input type="text" required class="form-control jscolor color-btn-text" name="color">
